# collegeplan

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: changelog.md  index.md
docs/api/: allocation.md  assumptions.md  cost-profiles.md  engine.md  exceptions.md  glide-paths.md  index.md  models.md  reporting.md  sensitivity.md  solver.md  validators.md
docs/concepts/: cost-profiles.md  glide-paths.md  overview.md  sensitivity.md
docs/getting-started/: installation.md  quickstart.md
examples/: sensitivity_sweep.yaml  single_child.yaml  two_kids.yaml
src/collegeplan/: __init__.py  allocation.py  assumptions.py  cli.py  cost_profiles.py  engine.py  exceptions.py  glide_path.py  models.py  reporting.py  sensitivity.py  solver.py  validators.py
tests/: conftest.py  test_allocation.py  test_assumptions.py  test_cli.py  test_cost_profiles.py  test_engine.py  test_exceptions.py  test_glide_path.py  test_golden.py  test_reporting.py  test_sensitivity.py  test_sensitivity_edge_cases.py  test_solver.py  test_solver_edge_cases.py  test_validators.py
