[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "collegeplan"
version = "0.1.0"
description = "A deterministic college cost projection and savings planning engine"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "John Hodge" },
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/collegeplan"]
warn_return_any = true
warn_unused_configs = true
