[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "collegeplan"
version = "0.2.0"
description = "A deterministic college cost projection and savings planning engine"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Engineer Investor", email = "egr.investor@gmail.com" },
]
keywords = ["college", "529", "education", "savings", "financial-planning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://engineerinvestor.github.io/collegeplan/"
Repository = "https://github.com/engineerinvestor/collegeplan"
Documentation = "https://engineerinvestor.github.io/collegeplan/"
Issues = "https://github.com/engineerinvestor/collegeplan/issues"
Changelog = "https://engineerinvestor.github.io/collegeplan/changelog/"

[project.scripts]
collegeplan = "collegeplan.cli:main"

[project.optional-dependencies]
cli = ["pyyaml>=6.0"]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "pyyaml>=6.0"]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/collegeplan"]
warn_return_any = true
warn_unused_configs = true
